added device status usecase, some changes to FusedLocationService lifecycle

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
 
     <string name="current_mode">currentMode</string>
     <string name="ambulance_mode">ambulance</string>
+    <string name="non_driver_mode">person</string>
     <string name="driver_mode">driver</string>
 
 </resources>
