UI/UX changes (help images, mode toggle)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,7 @@
     <string name="ambulance_mode">ambulance</string>
     <string name="non_driver_mode">person</string>
     <string name="driver_mode">driver</string>
+    <string name="ambulance_rb">Ambulance</string>
+    <string name="driver_rb">Driver</string>
 
 </resources>
