refactoring (primarily dagger dependencies)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SaveAlife Notifier</string>
+    <string name="app_name">SaveAlife</string>
     <string name="AREA_KEY">areaKey</string>
     <string name="lat_key">latitudeKey</string>
     <string name="long_key">longitudeKey</string>
